examples/tests/compute/invalid/struct/main.cue
package testing

#dagger: compute: whatever: "wrong"
